[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/world/Circle.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/world/levels/Level_018.gd" type="Script" id=2]
[ext_resource path="res://src/world/obstacles/Wall_1.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/world/obstacles/Wall_0.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/world/obstacles/RotatableTriangle.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/world/obstacles/Wall_Wide_0.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/world/obstacles/Button.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/world/obstacles/Beam.tscn" type="PackedScene" id=8]

[node name="Level" type="Node2D"]
show_behind_parent = true
position = Vector2( -2, 0 )
script = ExtResource( 2 )
level_name = "There Are No Colors In The Dark"

[node name="Circles" type="Node2D" parent="."]

[node name="Circle" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 115.684, 120.291 )
color_type = 2
angle = 210
size = 10.0

[node name="Circle2" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 1620.75, 169.274 )
color_type = 1
angle = 90
size = 18.0

[node name="Circle3" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 893.483, 548.456 )
angle = 110
size = 24.0

[node name="Circle7" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 281.087, 638.157 )
angle = 110

[node name="Circle4" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 1632.88, 506.381 )
color_type = 2
angle = 30
size = 24.0

[node name="Circle5" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 219.805, 166.871 )
angle = 30
size = 20.0

[node name="Circle6" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 1568.68, 880.431 )
color_type = 1

[node name="Circle8" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 404.116, 950.068 )
color_type = 2
angle = -20
size = 19.0

[node name="Circle9" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 997.819, 969.683 )
color_type = 1

[node name="Circle10" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 365.41, 433.783 )
color_type = 3
angle = 210
size = 10.0

[node name="Circle11" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 1540.16, 968.775 )
color_type = 3
angle = 185
size = 8.0

[node name="Circle12" parent="Circles" instance=ExtResource( 1 )]
position = Vector2( 590.189, 661.118 )
color_type = 3

[node name="Statics" type="Node2D" parent="."]

[node name="Beams" type="Node2D" parent="Statics"]

[node name="Beam" parent="Statics/Beams" instance=ExtResource( 8 )]
position = Vector2( 599, 540 )
scale = Vector2( 1.6, 0.713 )
color_type = 2

[node name="Beam2" parent="Statics/Beams" instance=ExtResource( 8 )]
position = Vector2( 599, 161 )
scale = Vector2( 1.6, 0.485 )
color_type = 2

[node name="Beam3" parent="Statics/Beams" instance=ExtResource( 8 )]
position = Vector2( 599, 919 )
scale = Vector2( 1.6, 0.485 )
color_type = 2

[node name="Beam4" parent="Statics/Beams" instance=ExtResource( 8 )]
position = Vector2( 1326.5, 540 )
scale = Vector2( 1.6, 0.713 )
color_type = 1

[node name="Beam6" parent="Statics/Beams" instance=ExtResource( 8 )]
position = Vector2( 1326.5, 919 )
scale = Vector2( 1.6, 0.485 )
color_type = 1

[node name="Beam5" parent="Statics/Beams" instance=ExtResource( 8 )]
position = Vector2( 1326.5, 161 )
scale = Vector2( 1.6, 0.485 )
color_type = 1

[node name="Rotatables" type="Node2D" parent="Statics"]

[node name="RotatableTriangle" parent="Statics/Rotatables" instance=ExtResource( 5 )]
position = Vector2( 804.857, 168 )
rotation = -1.5708
scale = Vector2( 1.1, 1.1 )
angles = PoolIntArray( 180, 90, 0, -90 )
reversed = true

[node name="RotatableTriangle2" parent="Statics/Rotatables" instance=ExtResource( 5 )]
position = Vector2( 1120.75, 168 )
rotation = 3.14159
scale = Vector2( 1.1, 1.1 )
angles = PoolIntArray( 180, -90, 0, 90 )

[node name="RotatableTriangle3" parent="Statics/Rotatables" instance=ExtResource( 5 )]
position = Vector2( 804.857, 915 )
scale = Vector2( 1.1, 1.1 )
angles = PoolIntArray( 180, -90, 0, 90 )

[node name="RotatableTriangle4" parent="Statics/Rotatables" instance=ExtResource( 5 )]
position = Vector2( 1120.75, 915 )
rotation = 1.5708
scale = Vector2( 1.1, 1.1 )
angles = PoolIntArray( 180, 90, 0, -90 )
reversed = true

[node name="Wall13" parent="Statics" instance=ExtResource( 3 )]
position = Vector2( 189.5, 1080 )
rotation = 1.5708
scale = Vector2( 1, 0.915 )

[node name="Wall14" parent="Statics" instance=ExtResource( 3 )]
position = Vector2( 1736.5, 1080 )
rotation = 1.5708
scale = Vector2( 1, 0.915 )

[node name="Wall6" parent="Statics" instance=ExtResource( 3 )]
position = Vector2( 189.5, 0 )
rotation = 1.5708
scale = Vector2( 1, 0.915 )

[node name="Wall8" parent="Statics" instance=ExtResource( 3 )]
position = Vector2( 1736.5, 0 )
rotation = 1.5708
scale = Vector2( 1, 0.915 )

[node name="Wall4" parent="Statics" instance=ExtResource( 6 )]
position = Vector2( -38.5158, 757.833 )
rotation = 1.5708
scale = Vector2( 1, 0.915 )

[node name="Wall10" parent="Statics" instance=ExtResource( 6 )]
position = Vector2( -38.5158, 321.833 )
rotation = 1.5708
scale = Vector2( 1, 0.915 )

[node name="Wall9" parent="Statics" instance=ExtResource( 6 )]
position = Vector2( 1964.52, 757.833 )
rotation = 1.5708
scale = Vector2( 1, 0.915 )

[node name="Wall12" parent="Statics" instance=ExtResource( 6 )]
position = Vector2( 1964.52, 321.833 )
rotation = 1.5708
scale = Vector2( 1, 0.915 )

[node name="Button" parent="Statics" instance=ExtResource( 7 )]
position = Vector2( 92.4841, 757.833 )

[node name="Button2" parent="Statics" instance=ExtResource( 7 )]
position = Vector2( 1833.52, 757.833 )

[node name="Button3" parent="Statics" instance=ExtResource( 7 )]
position = Vector2( 92.4842, 321.833 )

[node name="Button4" parent="Statics" instance=ExtResource( 7 )]
position = Vector2( 1833.52, 321.833 )

[node name="Wall" parent="Statics" instance=ExtResource( 4 )]
position = Vector2( 1507.4, 321.833 )
rotation = 1.5708
scale = Vector2( 1, 0.915 )

[node name="Wall3" parent="Statics" instance=ExtResource( 4 )]
position = Vector2( 418.4, 321.833 )
rotation = 1.5708
scale = Vector2( 1, 0.915 )

[node name="Wall5" parent="Statics" instance=ExtResource( 4 )]
position = Vector2( 418.4, 757.833 )
rotation = 1.5708
scale = Vector2( 1, 0.915 )

[node name="Wall2" parent="Statics" instance=ExtResource( 4 )]
position = Vector2( 1507.4, 757.833 )
rotation = 1.5708
scale = Vector2( 1, 0.915 )
