extends Level

func _ready():
	$Statics/Button.switchables.append($Statics/Beams/Beam)
	$Statics/Button.switchables.append($Statics/Beams/Beam2)
	$Statics/Button.switchables.append($Statics/Beams/Beam3)
	$Statics/Button.switchables.append($Statics/Rotatables/RotatableTriangle3)
	$Statics/Button.switchables.append($Statics/Rotatables/RotatableTriangle4)
	$Statics/Button2.switchables.append($Statics/Beams/Beam4)
	$Statics/Button2.switchables.append($Statics/Beams/Beam5)
	$Statics/Button2.switchables.append($Statics/Beams/Beam6)
	$Statics/Button2.switchables.append($Statics/Rotatables/RotatableTriangle3)
	$Statics/Button2.switchables.append($Statics/Rotatables/RotatableTriangle4)
	$Statics/Button3.switchables.append($Statics/Beams/Beam)
	$Statics/Button3.switchables.append($Statics/Beams/Beam2)
	$Statics/Button3.switchables.append($Statics/Beams/Beam3)
	$Statics/Button3.switchables.append($Statics/Rotatables/RotatableTriangle)
	$Statics/Button3.switchables.append($Statics/Rotatables/RotatableTriangle2)
	$Statics/Button4.switchables.append($Statics/Beams/Beam4)
	$Statics/Button4.switchables.append($Statics/Beams/Beam5)
	$Statics/Button4.switchables.append($Statics/Beams/Beam6)
	$Statics/Button4.switchables.append($Statics/Rotatables/RotatableTriangle)
	$Statics/Button4.switchables.append($Statics/Rotatables/RotatableTriangle2)
	for beam in $Statics/Beams.get_children():
		beam.possible_colors.append(Circle.ColorType.WHITE)
		beam.possible_colors.append(Circle.ColorType.BLUE)
		beam.possible_colors.append(Circle.ColorType.GREEN)
		beam.possible_colors.append(Circle.ColorType.RED)
